# tdx-attestation-sdk

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
clis/dcap-sp1-cli/: Cargo.toml  README.md
clis/dcap-sp1-cli/elf/: riscv32im-succinct-zkvm-elf
clis/dcap-sp1-cli/src/: constants.rs  lib.rs  main.rs  parser.rs
clis/dcap-sp1-cli/src/chain/: attestation.rs  mod.rs
clis/dcap-sp1-cli/src/chain/pccs/: enclave_id.rs  fmspc_tcb.rs  pcs.rs
crates/coco-provider/: Cargo.toml  README.md
crates/coco-provider/examples/: example.rs
crates/coco-provider/src/: cpu.rs  error.rs  hypervisor.rs  lib.rs  utils.rs
crates/coco-provider/src/coco/: configfs.rs  mod.rs  tpm.rs
crates/coco-provider/src/tests/: lib-test.rs
tdx/: Cargo.toml  Makefile  README.md  build.rs
tdx/examples/: attestation.rs  fmspc.rs  inspect.rs
tdx/src/: device.rs  error.rs  lib.rs  utils.rs
tdx/src/pccs/: enclave_id.rs  fmspc_tcb.rs  mod.rs  pcs.rs
zk/risc0/: .env.example  README.md
zk/risc0/host/: Cargo.toml
zk/risc0/host/data/: intel_root_crl.hex  pck_platform_crl.der  pck_platform_crl.hex  signing_cert.hex  tcbinfo-tdx-v3.json
zk/risc0/host/src/: main.rs
zk/risc0/methods/: Cargo.toml  build.rs
zk/risc0/methods/guest/: Cargo.toml
zk/risc0/methods/guest/src/: main.rs
zk/sp1/: .gitignore  Cargo.toml  README.md
zk/sp1/elf/: dcap-sp1-guest-program-elf  riscv32im-succinct-zkvm-elf
zk/sp1/program/: Cargo.toml
zk/sp1/program/src/: main.rs
zk/sp1/script/: Cargo.toml  build.rs
zk/sp1/script/data/: identity_tdx.json
