[workspace]
resolver = "2"
members = [
    "crates/*",
    "tdx"
]
exclude = [
    "clis/dcap-bonsai-cli",
    "clis/dcap-sp1-cli",
    "zk/risc0",
    "zk/sp1"
]

[workspace.package]
name = "automata-tdx-attestation-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://www.ata.network/"
license = "Apache-2.0"

[workspace.dependencies]
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git" }

base64-url = "3.0.0"
bincode = "1.3.3"
hex = "0.4.3"
log = "0.4.22"
rand = "0.8.5"
serde = "1.0.206"
serde-big-array = "0.5.1"
sev = { version = "4.0.0", default-features = false, features = ['snp'] }
sysinfo = "0.30.13"
ureq = { version = "2.10.1", features = ["json"] }
users = "0.11.0"

# workspace
coco-provider = { path = "crates/coco-provider" }
