[workspace]
resolver = "2"
members = [
    "tdx"
]
exclude = [
    "clis/dcap-bonsai-cli",
    "clis/dcap-sp1-cli",
    "zk/risc0",
    "zk/sp1"
]

[workspace.package]
name = "automata-tdx-attestation-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://www.ata.network/"
license = "Apache-2.0"

[workspace.dependencies]
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git", rev="d847b8f75a493640c4881bdf67775250b6baefab" }

base64-url = "3.0.0"
hex = "0.4.3"
rand = "0.8.5"
serde = "1.0.217"
ureq = { version = "2.12.1", features = ["json"] }
alloy = "0.12.5"
anyhow = "1.0.97"
chrono = "0.4.40"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
x509-parser = "0.15.1"
clap = { version = "4.0", features = ["derive", "env"] }
