[package]
name = "tdx"
version = "0.2.0"
edition = "2021"

[lib]
name = "tdx"
crate-type = ["rlib", "cdylib"]

[features]
default = ["configfs", "tpm"]
configfs = ["dep:coco-provider", "coco-provider/configfs"]
tpm = ["dep:coco-provider", "coco-provider/tpm"]
clib = ["dep:once_cell", "configfs", "tpm"]
coco-provider = ["dep:coco-provider"]

[build-dependencies]
cbindgen = "0.29.0"

[profile.release]
lto = true

[dependencies]
dcap-rs.workspace = true
rand.workspace = true
ureq.workspace = true
base64-url.workspace = true
serde.workspace = true
hex.workspace = true
alloy.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
x509-parser.workspace = true

once_cell = { version = "1.20.2", optional=true }
coco-provider = { git = "https://github.com/automata-network/coco-provider-sdk", optional = true, default-features = false }
