[package]
name = "dcap-sp1-cli"
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://www.ata.network/"
license = "Apache-2.0"

[dependencies]
sp1-sdk = "2.0.0"
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0.82"
x509-parser = "0.15.1"
alloy = { version = "0.1", features = ["full"] }

[build-dependencies]
sp1-helper = "2.0.0"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-sha2-v0.10.8" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", branch = "patch-v0.5.5" }
