[package]
version = "0.1.0"
name = "dcap-script"
edition = "2021"
default-run = "dcap"

[[bin]]
name = "dcap"
path = "src/bin/dcap.rs"

[dependencies]
dcap-rs = { workspace = true }
sp1-sdk = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"

[build-dependencies]
sp1-build = "^5.0.0"
sp1-sdk.workspace = true